--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "holaexpressts",
-  "version": "1.0.0",
+  "name": "express-socketio-typescript",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "watch": "nodemon dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.11.0",
-    "express": "^4.16.2"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/nodemon": "^1.19.0"
   }
 }
