--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
-    "@types/nodemon": "^1.19.0"
+    "@types/nodemon": "^1.19.0",
+    "@types/socket.io": "^2.1.4"
   }
 }
