--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "watch": "nodemon dist/index.js"
+    "watch": "copyfiles -u 1 src/**/*.html dist && nodemon dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "copyfiles": "^2.1.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@types/copyfiles": "^2.1.1",
     "@types/express": "^4.17.2",
     "@types/nodemon": "^1.19.0",
     "@types/socket.io": "^2.1.4"
